메인 페이지 adapter 완료, 캐시페이지 수정중

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,8 @@
             android:id="@+id/main_category_tab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:tabSelectedTextColor="#e90005"
+            app:tabIndicatorColor="#e90005"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_pager" />
 
