--- a/app/src/main/res/layout/cash_history_fragment.xml
+++ b/app/src/main/res/layout/cash_history_fragment.xml
@@ -3,9 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="충전내역 Fragment" />
+    <LinearLayout
+        android:id="@+id/cash_history_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="120dp"
+        android:background="#efefef"
+        android:orientation="vertical"/>
+
+    <ImageView
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@id/cash_history_layout"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/open"
+        android:layout_width="25dp"
+        android:layout_height="15dp" />
 </RelativeLayout>
