--- a/app/src/main/res/layout/activity_my_cash.xml
+++ b/app/src/main/res/layout/activity_my_cash.xml
@@ -68,7 +68,54 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_below="@id/cash_layout1"
+        android:id="@+id/cash_layout2"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cash_layout1"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="30dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="30dp">
+
+        <ImageView
+            android:id="@+id/cash_coin_img"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/coin" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/cash_coin_img"
+            android:gravity="center"
+            android:text=" 보유캐시"
+            android:textColor="#000000"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/cash_cash_retention"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/cash_cash_text"
+            android:text="0"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/cash_cash_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/cash_cash_retention"
+            android:layout_alignParentRight="true"
+            android:text=" Cash" />
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_below="@id/cash_layout2"
         android:id="@+id/cash_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
