--- a/app/src/main/res/layout/cash_history_fragment_item.xml
+++ b/app/src/main/res/layout/cash_history_fragment_item.xml
@@ -1,6 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cash_history_inner_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/history_item_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:text="2018. 10. 17"
+        android:textColor="#000000" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp">
+
+        <TextView
+            android:id="@+id/history_item_cash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+200"
+            android:textColor="#1d68bf" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" Cash"
+            android:textColor="#000000" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/history_item_purchase"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="10dp"
+        android:text="구매완료"
+        android:textColor="#aeb4b7" />
+
+</RelativeLayout>
