--- a/app/src/main/res/layout/main_category_contents_item.xml
+++ b/app/src/main/res/layout/main_category_contents_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
-    android:layout_height="120dp">
+    android:layout_height="140dp">
 
     <ImageView
+        android:src="@drawable/dummy_100x140"
         android:id="@+id/main_category_item_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/dummy_cate_cont" />
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="#a0000000">
 
@@ -19,8 +19,8 @@
             android:id="@+id/main_category_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:text="작품명"
+            android:layout_margin="5dp"
             android:textColor="#ffffff"
             android:textSize="12sp" />
 
@@ -29,17 +29,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/main_category_item_name"
-            android:layout_margin="5dp"
             android:text="작가이름"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:textColor="#ffffff"
             android:textSize="10sp" />
 
         <ImageView
             android:id="@+id/main_category_view_img"
             android:layout_width="15dp"
-            android:layout_toLeftOf="@+id/main_category_view_count"
             android:layout_height="wrap_content"
             android:layout_below="@id/main_category_item_name"
+            android:layout_toLeftOf="@+id/main_category_view_count"
             android:src="@drawable/ic_eye_white_24dp" />
 
         <TextView
@@ -47,8 +48,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/main_category_item_name"
-            android:layout_margin="5dp"
             android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:text="0.0"
             android:textColor="#ffffff"
             android:textSize="10sp" />
