--- a/app/src/main/res/drawable/black_stroke.xml
+++ b/app/src/main/res/drawable/black_stroke.xml
@@ -3,10 +3,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#ffffff"/>
-    <stroke android:color="#000000" android:width="1dp"/>
-    <corners
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"/>
+    <stroke android:color="#bcbcbc" android:width="1dp"/>
 </shape>
