--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -5,8 +5,8 @@
     android:id="@+id/my_page_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#ffffff"
+    android:orientation="vertical"
     tools:context=".MyPageDir.MyPageActivity">
 
 
@@ -78,11 +78,25 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <Button
+        android:id="@+id/my_page_management_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/my_page_toolbar"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/black_stroke"
+        android:text="내 작품 관리"
+        android:textColor="#8170dc"
+        android:visibility="gone" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/my_page_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/my_page_toolbar"
+        android:layout_below="@id/my_page_management_btn"
         android:minHeight="?attr/actionBarSize"
         app:tabGravity="center"
         app:tabIndicatorColor="#e90005"
