--- a/app/src/main/res/layout/fragment_my_page1_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_my_page1_recycler_item.xml
@@ -60,10 +60,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/my_page_fragment1_contents_num"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
                 android:text="이어보기"
                 android:textColor="#ffffff"
                 android:textSize="10dp" />
         </RelativeLayout>
     </RelativeLayout>
-
 </RelativeLayout>
