--- a/app/src/main/res/layout/main_discount_contetns_item.xml
+++ b/app/src/main/res/layout/main_discount_contetns_item.xml
@@ -7,18 +7,19 @@
     <RelativeLayout
         android:id="@+id/discount_item_layout1"
         android:layout_width="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_height="120dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp">
 
         <ImageView
             android:id="@+id/discount_item_img1"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/dummy_cate_cont" />
+            android:layout_width="70dp"
+            android:layout_height="98dp"
+            android:src="@drawable/dummy_100x140"
+            android:layout_alignParentLeft="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginLeft="5dp"
@@ -112,21 +113,14 @@
                     android:text="0" />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/discount_item_summary1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/discount_item_summary1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="요약" />
-            </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="요약" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -134,15 +128,15 @@
         android:id="@+id/discount_item_layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_below="@id/discount_item_layout1">
+        android:layout_below="@id/discount_item_layout1"
+        android:layout_marginBottom="5dp">
 
         <ImageView
             android:id="@+id/discount_item_img2"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/dummy_cate_cont" />
+            android:layout_width="70dp"
+            android:layout_height="98dp"
+            android:src="@drawable/dummy_100x140"
+            android:layout_alignParentLeft="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -241,20 +235,15 @@
             </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/discount_item_summary2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="요약" />
 
-                <TextView
-                    android:id="@+id/discount_item_summary2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="요약" />
-            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 
@@ -266,10 +255,10 @@
 
         <ImageView
             android:id="@+id/discount_item_img3"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/dummy_cate_cont" />
+            android:layout_width="70dp"
+            android:layout_height="98dp"
+            android:src="@drawable/dummy_100x140"
+            android:layout_alignParentLeft="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -366,21 +355,14 @@
                     android:text="0" />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/discount_item_summary3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/discount_item_summary3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="요약" />
-            </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="요약" />
         </LinearLayout>
     </RelativeLayout>
 
