--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,140 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".MainActivityDir.MainActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
         <include
-            android:id="@+id/main_titlebar"
             layout="@layout/mainpage_custom_title_bar"
-            app:layout_constraintBottom_toTopOf="parent" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/main_pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ece6e6"
-            app:layout_constraintTop_toBottomOf="@+id/main_titlebar" />
+            android:layout_height="wrap_content" />
+    </android.support.v7.widget.Toolbar>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/main_category_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:tabSelectedTextColor="#e90005"
-            app:tabIndicatorColor="#e90005"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_pager" />
+    <ScrollView
+        android:id="@+id/main_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_toolbar">
 
-        <ImageView
-            android:id="@+id/main_category_open_img"
-            android:src="@drawable/option"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/main_category_tab"
-            app:layout_constraintTop_toBottomOf="@id/main_pager"
-            app:layout_constraintBottom_toBottomOf="@id/main_category_tab"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/main_category_recycler"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_tab" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/main_sub_add_banner"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:background="#b393da"
-            android:paddingTop="10dp"
-            android:text="서브 광고 배너"
-            android:textAlignment="center"
-            android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/main_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ece6e6" />
 
-        <ImageButton
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="18dp"
-            android:src="@drawable/ic_cancel_icon"
-            app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
-            app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/main_category_tab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/main_pager"
+                app:tabIndicatorColor="#e90005"
+                app:tabSelectedTextColor="#e90005" />
 
-        <TextView
-            android:id="@+id/main_newarrival_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="이달의 신작보기"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner" />
+            <ImageView
+                android:id="@+id/main_category_open_img"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/option"
+                app:layout_constraintBottom_toBottomOf="@id/main_category_tab"
+                app:layout_constraintLeft_toRightOf="@id/main_category_tab"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/main_pager" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/main_arrival_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/main_newarrival_text" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/main_category_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/main_category_tab" />
 
-        <include
-            android:id="@+id/main_discount_include"
-            layout="@layout/main_discount_contents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/main_arrival_recycler" />
+            <TextView
+                android:id="@+id/main_sub_add_banner"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:background="#b393da"
+                android:paddingTop="10dp"
+                android:text="서브 광고 배너"
+                android:textAlignment="center"
+                android:textSize="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
-        <include
-            android:id="@+id/main_best_include"
-            layout="@layout/main_best_contents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/main_discount_include" />
+            <ImageButton
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="18dp"
+                android:src="@drawable/ic_cancel_icon"
+                app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
+                app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
-        <include
-            android:id="@+id/main_recommend_include"
-            layout="@layout/main_recommend_contents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/main_best_include" />
+            <TextView
+                android:id="@+id/main_newarrival_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="이달의 신작보기"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner" />
 
-        <TextView
-            android:id="@+id/main_event_text"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="오늘의 이벤트"
-            android:textSize="20dp"
-            app:layout_constraintTop_toBottomOf="@id/main_recommend_include" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/main_arrival_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/main_newarrival_text" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/main_event_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fdceca"
-            app:layout_constraintTop_toBottomOf="@id/main_event_text" />
+            <include
+                android:id="@+id/main_discount_include"
+                layout="@layout/main_discount_contents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/main_arrival_recycler" />
 
-        <include
-            android:id="@+id/main_footer_include"
-            layout="@layout/main_footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="80dp"
-            app:layout_constraintTop_toBottomOf="@id/main_event_recycler" />
+            <include
+                android:id="@+id/main_best_include"
+                layout="@layout/main_best_contents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/main_discount_include" />
 
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+            <include
+                android:id="@+id/main_recommend_include"
+                layout="@layout/main_recommend_contents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/main_best_include" />
+
+            <TextView
+                android:id="@+id/main_event_text"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="오늘의 이벤트"
+                android:textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@id/main_recommend_include" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/main_event_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fdceca"
+                app:layout_constraintTop_toBottomOf="@id/main_event_text" />
+
+            <include
+                android:id="@+id/main_footer_include"
+                layout="@layout/main_footer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:layout_marginBottom="80dp"
+                app:layout_constraintTop_toBottomOf="@id/main_event_recycler" />
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+
+</RelativeLayout>
