--- a/app/src/main/res/layout/activity_webtoon.xml
+++ b/app/src/main/res/layout/activity_webtoon.xml
@@ -116,6 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/webtoon_comment_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
