--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
+    android:paddingBottom="11dp"
+    android:paddingTop="7dp"
+    android:background="#ffffff"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/comment_item_email"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:textColor="#000000"
         android:layout_height="wrap_content"
         android:text="mynameiskhan" />
 
