--- a/app/src/main/res/layout/main_best_contents.xml
+++ b/app/src/main/res/layout/main_best_contents.xml
@@ -55,6 +55,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_best_date"
-        android:layout_margin="5dp"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        android:layout_margin="5dp" />
 </RelativeLayout>
