--- a/app/src/main/res/layout/main_discount_contents.xml
+++ b/app/src/main/res/layout/main_discount_contents.xml
@@ -30,11 +30,11 @@
         android:textSize="20dp" />
 
     <LinearLayout
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/main_discount_view_all_text"
@@ -53,11 +53,10 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/main_discount_pager"
-        android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="370dp"
-        android:layout_below="@+id/main_discount_first_third_text">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="312dp"
+        android:layout_below="@+id/main_discount_first_third_text"
+        android:layout_margin="5dp" />
 
     <org.techtown.ideaconcert.MainActivityDir.CircleAnimIndicator
         android:id="@+id/circleAnimIndicator"
@@ -65,6 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_discount_pager"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="20dp" />
 
 </RelativeLayout>
