--- a/app/src/main/res/layout/mainpage_custom_title_bar.xml
+++ b/app/src/main/res/layout/mainpage_custom_title_bar.xml
@@ -2,60 +2,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/title_logo"
-        android:layout_width="40dp"
+        android:layout_width="50dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:src="@drawable/moonlight_small_icon" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/title_search_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@drawable/titlebar_border"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_toLeftOf="@id/title_mypage_btn"
         android:layout_toRightOf="@+id/title_logo"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+        android:background="@drawable/titlebar_border">
 
         <EditText
             android:id="@+id/title_search_text"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
             android:layout_gravity="center"
-            android:background="@null"
+            android:background="#e0e0e0"
+            android:layout_centerInParent="true"
             android:hint="@string/title_search"
             android:textAlignment="center"
-            android:textSize="15dp" />
+            android:textSize="12sp" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/main_title_search_btn"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/search"
+            android:layout_width="25dp"
+            android:layout_height="25dp" />
 
-        <Button
-            android:id="@+id/title_search_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/ic_search_icon" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <Button
+        android:id="@+id/title_mypage_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:id="@+id/title_mypage_btn"
-        android:layout_marginRight="10dp"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/ic_person_icon" />
+        android:layout_marginRight="5dp"
+        android:background="@drawable/user" />
 </RelativeLayout>
