--- a/app/src/main/res/layout/comment_reply_item.xml
+++ b/app/src/main/res/layout/comment_reply_item.xml
@@ -3,61 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
-    android:paddingLeft="15dp"
+    android:paddingLeft="30dp"
     android:paddingTop="7dp"
     android:paddingRight="15dp"
     android:paddingBottom="11dp">
 
+    <ImageView
+        android:id="@+id/reply_item_arrow_right"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_subdirectory_arrow_right_black_24dp" />
+
     <TextView
-        android:id="@+id/comment_item_email"
+        android:id="@+id/reply_item_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="mynameiskhan"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/reply_item_arrow_right"
+        android:text="name"
         android:textColor="#000000" />
 
     <TextView
-        android:id="@+id/comment_item_date"
+        android:id="@+id/reply_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:text="2018-09-05 13:03" />
 
-
-    <ImageView
-        android:id="@+id/comment_best_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/comment_item_date"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
     <TextView
-        android:id="@+id/comment_item_comment"
+        android:id="@+id/reply_item_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/comment_item_date"
+        android:layout_below="@id/reply_item_date"
         android:layout_marginTop="25dp"
-        android:layout_toRightOf="@id/comment_best_img"
-        android:text="너무 재밌어요~다음화는 언제 볼 수 있을까요? 벌써부터 시간이 안가네요 ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ" />
+        android:text="맞아요 완전 공가무ㅠㅜㅠㅜㅠ\n어떻게 기다리죠??" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/comment_item_comment"
+        android:layout_below="@id/reply_item_comment"
         android:layout_marginTop="25dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/comment_reply"
+            android:id="@+id/reply_accusation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="답글 53" />
-
-        <TextView
-            android:id="@+id/comment_accusation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
             android:text="신고" />
 
         <View
@@ -72,7 +63,7 @@
             android:src="@drawable/like" />
 
         <TextView
-            android:id="@+id/comment_item_like_num"
+            android:id="@+id/reply_item_like_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
