--- a/app/src/main/res/layout/contents_main_contents_info.xml
+++ b/app/src/main/res/layout/contents_main_contents_info.xml
@@ -82,9 +82,10 @@
 
     <ImageView
         android:id="@+id/contents_main_info_like_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/pick_2"
+        android:layout_marginRight="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/contents_main_info_img"
         app:layout_constraintRight_toLeftOf="@+id/contents_main_info_like_count"
         app:layout_constraintTop_toBottomOf="@id/contents_main_info_painter" />
