--- a/app/src/main/res/layout/main_category_contents_item.xml
+++ b/app/src/main/res/layout/main_category_contents_item.xml
@@ -22,7 +22,20 @@
             android:text="작품명"
             android:layout_margin="5dp"
             android:textColor="#ffffff"
-            android:textSize="12sp" />
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@id/main_category_movie_img"
+            android:textSize="11sp" />
+
+        <ImageView
+            android:visibility="gone"
+            android:src="@drawable/movie"
+            android:id="@+id/main_category_movie_img"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp" />
 
         <TextView
             android:id="@+id/main_category_author_name"
