--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -66,6 +66,7 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:id="@+id/comment_like_btn"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginRight="25dp"
