--- a/app/src/main/res/layout/comment_reply_item.xml
+++ b/app/src/main/res/layout/comment_reply_item.xml
@@ -57,6 +57,7 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:id="@+id/reply_like_btn"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginRight="25dp"
