--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/contents_main_item_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="7dp"
@@ -20,6 +20,14 @@
         android:text="작품명"
         android:textSize="15dp"
         android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/contents_main_watch_img"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="7dp"
+        android:visibility="gone"
+        android:layout_toLeftOf="@+id/contents_main_layout2" />
 
     <LinearLayout
         android:id="@+id/contents_main__layout1"
