--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -56,18 +56,20 @@
 
     <EditText
         android:id="@+id/comment_edit_text"
-        android:maxLength="3"
+        android:maxLength="500"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:background="#ffffff"
         android:layout_toLeftOf="@id/comment_enter"
+        android:textSize="12sp"
+        android:paddingLeft="5dp"
         android:hint="댓글을 입력해주세요 :)" />
 
     <Button
         android:id="@+id/comment_enter"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:background="#ffffff"
