--- a/app/src/main/res/layout/comment_fragment_recycler.xml
+++ b/app/src/main/res/layout/comment_fragment_recycler.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/comment_listview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/comment_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
