--- a/app/src/main/res/layout/comment_reply_item.xml
+++ b/app/src/main/res/layout/comment_reply_item.xml
@@ -27,6 +27,8 @@
         android:id="@+id/reply_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="10.5sp"
+        android:layout_marginTop="4sp"
         android:layout_alignParentRight="true"
         android:text="2018-09-05 13:03" />
 
