--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -9,26 +9,26 @@
     tools:context=".RegisterActivityDir.RegisterActivity">
 
     <LinearLayout
-        android:id="@+id/register_title_layout"
+        android:id="@+id/find_pw_title_layout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#ffffff"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/register_back_btn"
+            android:id="@+id/find_pw_back_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
         <TextView
-            android:id="@+id/register_login_txt"
+            android:id="@+id/find_pw_login_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
-            android:text="회원가입"
+            android:text="비밀번호 찾기"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -41,6 +41,14 @@
         android:layout_marginBottom="20dp"
         android:src="@drawable/moonlight_small_icon" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        android:text="가입한 이메일과 이름을 입력해주세요.\n이메일로 임시비밀번호가 전송됩니다."
+        android:textAlignment="center"
+        android:textColor="#786aaa" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,18 +57,19 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/register_email_text"
+            android:id="@+id/find_pw_email_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="E-mail" />
 
         <EditText
-            android:id="@+id/register_email"
+            android:id="@+id/find_pw_email"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:background="@drawable/round_border_white"
-            android:hint="  이메일을 입력해 주세요"
+            android:paddingLeft="10dp"
+            android:hint="이메일을 입력해 주세요"
             android:inputType="textEmailAddress"
             android:textSize="12sp" />
     </LinearLayout>
@@ -74,93 +83,44 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/register_pw_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="비밀번호" />
-
-        <EditText
-            android:id="@+id/register_pw"
-            android:layout_width="240dp"
-            android:layout_height="40dp"
-            android:background="@drawable/round_border_white"
-            android:hint="  비밀번호를 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="textPassword" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="15dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/register_pw_confirm_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="비밀번호 확인" />
-
-        <EditText
-            android:id="@+id/register_pw_confirm"
-            android:layout_width="240dp"
-            android:layout_height="40dp"
-            android:background="@drawable/round_border_white"
-            android:hint="  비밀번호를 다시 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="textPassword" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="15dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/register_name_text"
+            android:id="@+id/find_pw_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="이름" />
 
         <EditText
-            android:id="@+id/register_name"
+            android:id="@+id/find_pw_name"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:background="@drawable/round_border_white"
-            android:hint="  회원 이름을 입력해주세요"
-            android:textSize="12sp"
-            android:inputType="text" />
+            android:paddingLeft="10dp"
+            android:hint="회원 이름을 입력해주세요"
+            android:inputType="text"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/register_info_text"
+        android:id="@+id/find_pw_info_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        android:text="모든 내용을 기입하여 주십시오"
+        android:text="존재하지 않는 회원정보입니다."
         android:textColor="#e90005" />
 
     <Button
-        android:id="@+id/register_join_btn"
+        android:id="@+id/find_pw_confirm_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_border_purple"
         android:layout_margin="10dp"
-        android:text="회원가입"
+        android:background="@drawable/round_border_purple"
+        android:text="확인"
         android:textColor="#ffffff" />
 
     <Button
-        android:id="@+id/register_cancel_btn"
+        android:id="@+id/find_pw_cancel_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
