--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -10,4 +10,15 @@
         <item>Wi-Fi 에서만 보기</item>
         <item>항상사용</item>
     </string-array>
+    
+    <string-array name="consult_category">
+        <item>문의유형을 선택해주세요</item>
+        <item>서비스 이용</item>
+        <item>결제/환불</item>
+        <item>컨텐츠</item>
+        <item>개선사항</item>
+        <item>광고 및 제휴</item>
+        <item>이벤트</item>
+        <item>기타문의</item>
+    </string-array>
 </resources>
