1:1문의, 공지사항, 이용약관 완료 / FAQ 구현중

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -10,79 +10,71 @@
     tools:context=".MyPageDir.MyPageActivity">
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_page_toolbar"
+    <RelativeLayout
+        android:id="@+id/my_page_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize">
+        android:layout_height="50dp">
 
-        <RelativeLayout
-            android:id="@+id/my_page_title_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/my_page_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
-            <Button
-                android:id="@+id/my_page_back"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+        <TextView
+            android:id="@+id/my_page_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/my_page_back"
+            android:text="아이디"
+            android:textColor="#000000"
+            android:textSize="17sp" />
 
-            <TextView
-                android:id="@+id/my_page_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/my_page_back"
-                android:text="아이디"
-                android:textColor="#000000"
-                android:textSize="17sp" />
+        <TextView
+            android:id="@+id/my_page_nim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/my_page_id"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/my_page_id"
+            android:text="님" />
 
-            <TextView
-                android:id="@+id/my_page_nim"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/my_page_id"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/my_page_id"
-                android:text="님" />
+        <TextView
+            android:id="@+id/my_page_my_cash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/my_page_nim"
+            android:text="내 캐시 200"
+            android:textColor="#786aaa" />
 
-            <TextView
-                android:id="@+id/my_page_my_cash"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/my_page_nim"
-                android:text="내 캐시 200"
-                android:textColor="#786aaa" />
+        <ImageView
+            android:id="@+id/my_page_my_cash_img"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/my_page_my_cash"
+            android:src="@drawable/ic_keyboard_arrow_right_blue_24dp" />
 
-            <ImageView
-                android:id="@+id/my_page_my_cash_img"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/my_page_my_cash"
-                android:src="@drawable/ic_keyboard_arrow_right_blue_24dp" />
-
-            <Button
-                android:id="@+id/my_page_title_setting_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/setting" />
-        </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
+        <Button
+            android:id="@+id/my_page_title_setting_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/setting" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/my_page_management_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/my_page_toolbar"
+        android:layout_below="@id/my_page_title_layout"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
