--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -5,8 +5,43 @@
     android:layout_height="match_parent"
     tools:context=".noticeDir.NoticeActivity">
 
-    <ListView
-        android:id="@+id/notice_list_view"
+    <LinearLayout
+        android:id="@+id/notice_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/notice_back_btn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:background="@drawable/back" />
+
+        <TextView
+            android:id="@+id/notice_back_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:textColor="#000000"
+            android:text="공지사항" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/notice_underline"
+        android:layout_below="@id/notice_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#000000"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/notice_underline"
+        android:id="@+id/notice_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
