--- a/app/src/main/res/layout/notice_item.xml
+++ b/app/src/main/res/layout/notice_item.xml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="25dp"
-    android:paddingBottom="25dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/notice_title"
-        android:text="[신작 소식]11월 신작 웹툰안내!"
-        android:textSize="15sp"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:id="@+id/notice_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:paddingLeft="20dp"
+        android:paddingTop="25dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="25dp">
 
-    <TextView
-        android:id="@+id/notice_date"
-        android:layout_below="@id/notice_title"
-        android:text="2018.11.11"
-        android:textSize="10sp"
-        android:textColor="#666666"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/notice_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="15sp" />
 
-    <ImageView
-        android:src="@drawable/open"
-        android:id="@+id/notice_up_down_image"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_width="20dp"
-        android:layout_height="20dp" />
+        <TextView
+            android:id="@+id/notice_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/notice_title"
+            android:textColor="#666666"
+            android:textSize="10sp" />
+
+        <ImageView
+            android:id="@+id/notice_open_close_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/open" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/notice_content"
-        android:layout_below="@+id/notice_date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/notice_layout"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:visibility="gone"
+        android:textColor="#000000"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:background="#efefef"
+        android:clickable="false" />
 </RelativeLayout>
