--- a/app/src/main/res/layout/faq_child_item.xml
+++ b/app/src/main/res/layout/faq_child_item.xml
@@ -3,12 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ExpandableListView
-        android:id="@+id/faq_expandable_list_view"
+    <TextView
+        android:id="@+id/faq_child_text"
+        android:padding="10dp"
+        android:textColor="#000000"
+        android:background="#efefef"
         android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:groupIndicator="@null"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content" />
 </RelativeLayout>
